# babycancer

./: .gitignore  Cargo.toml  README.md  file.sh  presentation_cheatsheet.md  presentation_script.md
demo/: caption.srt  demo_commands.sh  srt2voice.py
demo_repl/source/: config.toml  readme.txt
script/: clean.sh
scripts/: clean.sh  file.sh  repl_demo_commands.sh  repl_demo_setup.sh  run.sh  test.sh
slides/: Makefile  beamerthemesintef.sty  presentation.aux  presentation.bcf  presentation.blg  presentation.nav  presentation.out  presentation.run.xml  presentation.tex  presentation.toc  presentation.vrb  refs.bib  sintefcolor.sty
src/: app.rs  backup.rs  command.rs  config.rs  directory.rs  lib.rs  main.rs  repl.rs
tests/: my_symlink  test.rs
tests/example/: config.toml
tests/example/dest/: my_symlink
tests/example/src/: my_symlink
