[package]
name = "babycancer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4", features = ["derive"] }
dirs = "6.0.0"
nix = { version = "0.30.1", features = ["fs"] }
notify = "8.2.0"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
toml_edit = "0.23.4"
users = "0.11.0"
